[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
serde_json = "1.0.85"
ipnet = "2.5.0"
pnet = { version = "0.31.0", features=["std"] }
rand = "0.8.5"
clap = {version = "4.0.18", features=["derive"] }
