[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-getters = "0.2"
serde_json = "1.0"
ipnet = "2.5"
pnet = { version = "0.31", features=["std"] }
rand = "0.8"
clap = { version = "4.0", features=["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
ctrlc = "3.2"
lazy_static = "1.4"
yaml-rust = "0.4"
