[package]
name = "scout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.5.0"
pnet = { version = "0.31.0", features = ["std"] }
clap = {version = "4.0.18", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde_json = "1.0.87"
ctrlc = "3.2.3"
yaml-rust = "0.4.5"
lazy_static = "1.4.0"

# TUI deps (to do later)
tui = "0.19.0"
crossterm = "0.25.0"